# writing-a-c-compiler

./: .gitignore  Cargo.toml  Makefile  README.md  main.s
assembly-ast/: Cargo.toml
assembly-ast/src/: fmt.rs  lib.rs  lower.rs
ast/: Cargo.toml
ast/src/: fmt.rs  lib.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/tests/: chapter-1.rs
cli/tests/common/: mod.rs
cli/tests/snapshots/: chapter_1__valid__multi_digit.snap  chapter_1__valid__newlines.snap  chapter_1__valid__no_newlines.snap  chapter_1__valid__return_0.snap  chapter_1__valid__return_2.snap  chapter_1__valid__spaces.snap  chapter_1__valid__tabs.snap
codegen/: Cargo.toml
codegen/src/: error.rs  lib.rs
lex/: Cargo.toml
lex/src/: error.rs  lib.rs  line.rs  token.rs
lex/src/snapshots/: lex__tests__simple_ident.snap  lex__tests__single_char_tokens.snap  lex__tests__single_char_tokens_multiple_lines.snap  lex__tests__snapshot_test-3.snap  lex__tests__snapshot_test.snap
parse/: Cargo.toml
parse/src/: lib.rs
src/: main.rs  ttype.rs
src/lex/: Cargo.toml
src/lex/src/: comment.rs  error.rs  lib.rs  line.rs  range.rs  token.rs  value_store.rs  vec_store.rs
tacky/: Cargo.toml
tacky/src/: fmt.rs  lib.rs  lower.rs
test-generator/: Cargo.toml
test-generator/src/: main.rs  test.rs
tests/: Cargo.toml
tests/tests/: chapter_1.rs
tests/tests/snapshots/: chapter_1__multi_digit.snap  chapter_1__newlines.snap  chapter_1__no_newlines.snap  chapter_1__return_0.snap  chapter_1__return_2.snap  chapter_1__spaces.snap  (+1 more)
x86/: Cargo.toml
x86/src/: fmt.rs  lib.rs  lower.rs
(+8 files in other folders)
