[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
lex = { path = "../lex" }
parse = { path = "../parse" }
tacky = { path = "../tacky/" }
codegen = { path = "../codegen" }
ast = { path = "../ast" }
tracing-subscriber = { version = "0.3.19", features = [ "env-filter" ] }
tracing = "0.1.41"
